# NotionMCP-Challenge

./: .env.example  .gitignore  GROQ_SETUP.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  calculator_app.py  mcp.json  pyproject.toml  test_groq_quick.py  test_notion_connection.py
challenge-results/: conversation.md
challenge-results/calculator-app/: main.py
challenge-results/ship/: SPECIFICATION.md
docs/: NOTION_SETUP.md  SETUP.md  TESTING.md
orchestrator/: __init__.py  agent_driver.py  errors.py  extractor.py  groq_client.py  logger.py  main.py  models.py  notion_mcp_client.py  notion_writer.py  poller.py  retry.py  spec_generator.py  status_syncer.py
scripts/: install_dependencies.sh  test_pipeline.py  test_state.json
tests/property/: test_notion_connection.py  test_pipeline_with_groq.py
tests/unit/: test_main.py  test_poller.py  test_status_syncer.py
